<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/soil_humidity"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soil_humidity"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/soil_humidity_value"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/air_humidity"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_humidity"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/air_humidity_value"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/temperature"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/temperature_value"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="42sp" />
    <Button
        android:id="@+id/refresh_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="false"
        android:onClick="onButtonClick"
        android:text="@string/refresh_plant_data" />

    <Button
        android:id="@+id/force_watering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onButtonClick"
        android:text="@string/force_watering_button" />


</LinearLayout>
