<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/bluetooth_devices"
        android:textSize="42dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bluetooth_device_list"
        android:layout_width="match_parent"
        android:layout_height="740dp"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"/>

    <FrameLayout
        android:id="@+id/button_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/button_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:clickable="false"
            android:onClick="onButtonClick"
            android:text="@string/select_bluetooth_device" />

        <Button
            android:id="@+id/button_scan_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="20dp"
            android:onClick="onButtonClick"
            android:text="@string/scan_bluetooth_device" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>
